syntax = "proto3";

package org.trp.cluster;

import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";

option java_package = "org.trp.cluster";
option java_outer_classname = "ApiMessages";

message StandingOrder {
    string id = 1;
    int64 from = 2;
    int64 to = 3;
    int32 amount = 4;
    google.protobuf.StringValue currency = 5;
    google.protobuf.StringValue notice = 6;
}

message StandingOrders {
    repeated StandingOrder stos = 1 [(scalapb.field).collection_type="scala.collection.immutable.List"];
}

message Envelope {
    int64 txId = 1;
//    string typeTag = 2 [(scalapb.field).type = "org.trp.cluster.EnvelopeTranslator"];
    bytes payload = 3;
}

message GetSTO {
    string id = 1;
}

message GetSTOs {
    int64 txId = 1;
}

message WaitForSTOs {
    int32 childrenCardinality = 1;
    int64 txId = 2;
}

message UpsertSTO {
    StandingOrder sto = 1;
}

//{
//"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36",
//"site": 123,
//"campaign": 456,
//"contact": 789,
//"ip": "10.5.5.7",
//"time": "2018-06-27 12:12:12"
//}

message OpenEvent {
    string userAgent = 1;
    int32 site = 2;
    int32 campaign = 3;
    int64 contact = 4;
    string ip = 5;
    string time = 6;
}